src/app/styles/style.sass
@import 'style-reset'
@import 'constants'
@import 'animation'

body 
  background-image: url('../img/bg.webp')
  background-position: center bottom
  background-size: cover
  background-repeat: no-repeat
  font-family: Roboto
 
.wrapper
  height: 100vh
  width: 100vw
  display: flex
  justify-content: center
  align-items: center
  overflow: scroll

.form
  display: flex
  flex-direction: column
  box-shadow: 0px 10px 13px -7px #000000
  width: 310px
  background-color: $color-transparent
  filter: drop-shadow(0px 4px 13px rgba(0, 0, 0, 0.25))
  padding: 30px 30px 15px 30px
  -webkit-transform: rotateY(360deg)
  transform: rotateY(360deg)
  &__title
    color: $color-primary
    text-align: center
    font-family: Roboto
    font-size: 24px
    font-style: normal
    font-weight: 400
    line-height: 20px
    margin-bottom: 45px
  &__fields
    display: flex
    flex-direction: column
    gap: 25px
    margin-bottom: 45px
  &__field input, &__field textarea
    background-color: transparent
    border-bottom: 1px solid $color-tertiary
    color: $color-secondary
    font-size: 18px
    line-height: 20px
    transition-property: all
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
    transition-duration: 150ms
    &:hover
      border-bottom: 1px solid $color-secondary
    &:focus
      border-bottom: 1px solid $color-secondary
  &__field_error input
    border-bottom: 1px solid $color-error
  &__field_error label
    color: $color-error
  &__field_error .error 
    visibility: visible
  &__label
    color: $color-primary
    font-size: 16px
  &__input, &__textarea
    width: 100%
    padding: 5px
    margin-top: 5px
  &__error
    padding-top: 1px
  &__status
    margin-top: 7px
    height: 14px
    visibility: hidden
  &__status_err
    visibility: visible
    color: $color-error
  &__status_success
    visibility: visible
    color: $color-success
  &_success
    border: 1px solid $color-success
  &_error
    border: 1px solid $color-error

.form__field textarea::-webkit-scrollbar, ::-webkit-scrollbar
  width: 0

.error
  height: 14px
  visibility: hidden
  font-size: 14px
  color: $color-error

.modal
  position: absolute
  left: 50%
  top: 50%
  transform: translate(-50%, -50%)
  width: 310px
  background-color: $color-transparent
  filter: drop-shadow(0px 4px 13px rgba(0, 0, 0, 0.25))
  padding: 30px
  align-items: center
  justify-content: center
  transition-property: all
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
  transition-duration: 150ms
  &__content
    display: flex
    flex-direction: column
    gap: 45px
    background-color: transparent
    color: $color-primary
    font-size: 24px
    text-align: center

.modal-button
  position: absolute
  left: 0
  top: 0

dialog[open]::backdrop
  background-color: rgb(0 0 0 / 35%)
  backdrop-filter: blur(5px)

.no-scroll
  overflow: hidden

.button
  width: 100%
  background-color: $color-tertiary
  color: $color-primary
  font-size: 16px
  font-weight: 600
  letter-spacing: .5px
  display: flex
  justify-content: center
  align-content: center
  padding: 10px 0 12px 0
  cursor: pointer
  transition-property: all
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
  transition-duration: 150ms
  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05)
  &:hover
    background-color: #4983B3
    color: $color-secondary
  &:disabled
    background-color: #4C6173
    &:hover
      background-color: #4C6173

.content
  padding: 20px
  color: $color-secondary
  background-image: url('../img/bg.webp')

